--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <hr>
 
     <main>
+      <section>
+        <h4>I am the first pull request</h4>
+      </section>
+
       <section id="attendance">
         <h3>Attendance list</h3>
         <ul>
