color and background

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel = "icon" href = "images/ChatGPT_logo.png">
+    <link rel = "stylesheet" type = "text/css" href = "lab3style.css">
     <title>CSE 110 Lab 2 Discussion</title>
   </head>
 
