--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <hr>
 
     <main>
-      <section>
+      <section class="pull-request">
         <h4>I am the first pull request</h4>
         <h5>I am the second pull request</h4>
         <h5>I am the third pull request</h4>
