--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="headers">
         <h1>First Brainstorm</h1>
 	    <h2>April. 12, 2023</h2>
     </header>
@@ -36,8 +36,8 @@
       </section>
 
       <section id="attendance">
-        <h3>Attendance list</h3>
-        <ul>
+        <h3 class="attendancelist">Attendance list</h3>
+        <ul  class="teamlist">
           <li>Bill</li>
           <li>Group member 2</li>
           <li>Group member 3</li>
