--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </video>
       </section>
 
-      <section>
+      <section class="surveyform">
         <h4>Please fill this Survey</h4>
         <form action="submit-form" method="post">
           <fieldset>
