updated more features
display, sizing, position, and pseudo class

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <link rel = "icon" href = "images/ChatGPT_logo.png">
     <link rel = "stylesheet" type = "text/css" href = "lab3style.css">
-    <title>CSE 110 Lab 2 Discussion</title>
+    <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap"
+    rel="stylesheet">
   </head>
 
   <body>
@@ -31,8 +32,9 @@
     <main>
       <section class="pull-request">
         <h4>I am the first pull request</h4>
-        <h5>I am the second pull request</h4>
-        <h5>I am the third pull request</h4>
+        <h5 class="box" id="one">I am the second pull request</h5>
+        <h5 class="box" id="two" attribute="thirdpullrequest">I am the third pull request</h5>
+        <button class="my-button">Click me</button>
       </section>
 
       <section id="attendance">
