updated flex, grid, responsiveness

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <section id="agenda">
         <h3>Agenda for today's meeting</h3>
-        <ol>
+        <ol id="agendalist">
           <li>Something</li>
           <li>Something</li>
           <li>Something</li>
